# GeXus

./: .gitignore  GEOTIFF_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  README_FLATGEOBUF.md  README_GEOTIFF.md  pyproject.toml  setup.cfg  verify_geotiff_implementation.py  verify_implementation.py
.github/workflows/: ci.yml
docs/: flatgeobuf_reader.md  geotiff_reader.md
docs/apache-beam/:  01-beam-overview.md
examples/: flatgeobuf_example.py  geotiff_example.py
gexus/: __init__.py  cli.py
gexus/analytics/: __init__.py  indices.py  temporal.py
gexus/core/: __init__.py  processor.py
gexus/formats/: __init__.py  base.py  flatgeobuf.py  geotiff.py  raster_base.py
gexus/transforms/: __init__.py  raster.py  spatial.py
requirements/: base.txt  dev.txt  test.txt
tests/: conftest.py  test_flatgeobuf.py  test_geotiff.py  test_integration.py  test_raster_integration.py
tests/unit/: test_core.py
