[metadata]
name = gexus
author = ghonim0007
author_email = ghonem717@gmail.com
description = Open-source framework for big geospatial data processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ghonim0007/GeXus
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    apache-beam[gcp]>=2.50.0
    click>=8.0.0

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    black>=23.0
    isort>=5.12
    flake8>=6.0
    mypy>=1.0

[options.entry_points]
console_scripts =
    gexus = gexus.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503